--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@trpc/next": "^10.8.1",
     "@trpc/react-query": "^10.8.1",
     "@trpc/server": "^10.8.1",
+    "install": "^0.13.0",
     "next": "13.1.2",
     "next-auth": "^4.18.7",
-    "react": "18.2.0",
+    "pixi.js": "^7.1.1",
+    "prop-types": "^15.7.2",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-pixi-fiber": "^1.0.6",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
