--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/react-query": "^10.8.1",
     "@trpc/server": "^10.8.1",
     "konva": "^8.4.2",
+    "mathjs": "^11.5.0",
     "next": "13.1.2",
     "next-auth": "^4.18.7",
     "react": "18.2.0",
