--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
+    "@heroicons/react": "^2.0.15",
     "@mantine/core": "^5.10.3",
     "@mantine/hooks": "^5.10.3",
     "@mantine/next": "^5.10.3",
@@ -22,6 +23,7 @@
     "@trpc/next": "^10.8.1",
     "@trpc/react-query": "^10.8.1",
     "@trpc/server": "^10.8.1",
+    "clsx": "^1.2.1",
     "konva": "^8.4.2",
     "mathjs": "^11.5.0",
     "next": "13.1.2",
@@ -30,6 +32,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-konva": "^18.2.3",
+    "socket.io": "^4.6.0",
+    "socket.io-client": "^4.6.0",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
