--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.6",
     "@heroicons/react": "^2.0.15",
     "@mantine/core": "^5.10.3",
     "@mantine/hooks": "^5.10.3",
     "@mantine/next": "^5.10.3",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.9",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.8.0",
     "@tanstack/react-query": "^4.20.0",
@@ -30,6 +33,7 @@
     "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
     "react-icons": "^4.7.1",
     "react-konva": "^18.2.3",
     "socket.io": "^4.6.0",
