--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
+    "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.15",
     "@mantine/core": "^5.10.3",
     "@mantine/hooks": "^5.10.3",
