--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-draggable": "^4.4.5",
     "react-icons": "^4.7.1",
     "react-konva": "^18.2.3",
+    "react-remark": "^2.1.0",
     "socket.io": "^4.6.0",
     "socket.io-client": "^4.6.0",
     "superjson": "1.9.1",
