--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "cSpell.words": ["Boid", "boids", "Konva"],
+  "cSpell.words": ["Boid", "boids", "heroicons", "Konva", "lerp"],
   "workbench.colorCustomizations": {
     "activityBar.activeBackground": "#2f7c47",
     "activityBar.background": "#2f7c47",
