--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@paralleldrive/cuid2": "^2.2.0",
     "@prisma/client": "^4.8.0",
+    "@pusher/push-notifications-web": "^1.1.0",
     "@tanstack/react-query": "^4.20.0",
     "@trpc/client": "^10.8.1",
     "@trpc/next": "^10.8.1",
@@ -29,10 +31,13 @@
     "@trpc/server": "^10.8.1",
     "clientjs": "^0.2.1",
     "clsx": "^1.2.1",
+    "cuid": "^3.0.0",
     "konva": "^8.4.2",
     "mathjs": "^11.5.0",
     "next": "13.1.2",
     "next-auth": "^4.18.7",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
@@ -42,7 +47,8 @@
     "socket.io": "^4.6.0",
     "socket.io-client": "^4.6.0",
     "superjson": "1.9.1",
-    "zod": "^3.20.2"
+    "zod": "^3.20.2",
+    "zod-prisma-types": "^2.7.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
