--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
     "@paralleldrive/cuid2": "^2.2.0",
     "@prisma/client": "^4.8.0",
     "@pusher/push-notifications-web": "^1.1.0",
+    "@radix-ui/react-progress": "^1.0.3",
     "@tanstack/react-query": "^4.20.0",
     "@trpc/client": "^10.8.1",
     "@trpc/next": "^10.8.1",
     "@trpc/react-query": "^10.8.1",
     "@trpc/server": "^10.8.1",
+    "class-variance-authority": "^0.7.0",
     "clientjs": "^0.2.1",
     "clsx": "^1.2.1",
     "cuid": "^3.0.0",
     "konva": "^8.4.2",
+    "lucide-react": "^0.331.0",
     "mathjs": "^11.5.0",
     "next": "13.1.2",
     "next-auth": "^4.18.7",
@@ -41,12 +44,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.12.0",
     "react-konva": "^18.2.3",
     "react-remark": "^2.1.0",
     "socket.io": "^4.6.0",
     "socket.io-client": "^4.6.0",
     "superjson": "1.9.1",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.20.2",
     "zod-prisma-types": "^2.7.1"
   },
